@@ -1,12 +1,11 @@
 package com.datastax.spark.connector.demo
 
 import org.apache.spark.{SparkContext, SparkConf}
-import com.datastax.spark.connector.testkit._
 
 trait DemoApp {
 
-  val sparkMasterHost = DefaultHost
-  val cassandraHost = DefaultHost
+  val sparkMasterHost = "127.0.0.1"
+  val cassandraHost = "127.0.0.1"
 
   // Tell Spark the address of one Cassandra node:
   val conf = new SparkConf(true).set("spark.cassandra.connection.host", cassandraHost)
